--- a/alura_plus/styles/style.css
+++ b/alura_plus/styles/style.css
@@ -208,3 +208,111 @@ body {
   margin-bottom: 6.1881em;
 }
 
+/* Estilos para telas menores que 768px (celulares) */
+@media (max-width: 767px) {
+  .container {
+    grid-template-columns: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  .home_div,
+  .sec {
+    margin: 0 2em;
+  }
+
+  .container_img {
+    width: 50%;
+    justify-content: center;
+    margin: 1em auto;
+  }
+
+  .container_title {
+    font-size: 2rem;
+    margin-top: 1em;
+  }
+
+  .container_text {
+    font-size: 0.875rem;
+  }
+
+  .container_5_div {
+    flex-direction: column;
+    margin: 2em 0;
+  }
+
+  .container_item {
+    margin-right: 0;
+  }
+
+  .footer_list {
+    flex-wrap: wrap;
+  }
+
+  .footer_list li {
+    margin-right: 0.5em;
+  }
+
+  .footer_text {
+    font-size: 0.75rem;
+  }
+
+  .end {
+    margin-bottom: 3em;
+  }
+}
+
+/* Estilos para telas entre 768px e 1023px (tablets) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    grid-template-columns: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  .home_div,
+  .sec {
+    margin: 0 4em;
+  }
+
+  .container_img {
+    width: 50%;
+    justify-content: center;
+    margin: 1em auto;
+  }
+
+  .container_title {
+    font-size: 2.5rem;
+    margin-top: 1em;
+  }
+
+  .container_text {
+    font-size: 1rem;
+  }
+
+  .container_5_div {
+    flex-direction: column;
+    margin: 2em 0;
+  }
+
+  .container_item {
+    margin-right: 0;
+  }
+
+  .footer_list {
+    flex-wrap: wrap;
+  }
+
+  .footer_list li {
+    margin-right: 0.5em;
+    }
+
+  .footer_text {
+    font-size: 0.75rem;
+  }
+
+  .end {
+    margin-bottom: 3em;
+  }
+}
+
